frontend/test/should_fail/index_exec_edge_fromIndexMultipleFromTo_index_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s(j:int)
{
	{ i:set<AEdge>=edgesFromIndexMultipleFromTo(j, 0, 1, bard, 42.0, 42.0 + 1) }
}